patch: auth routes api docs done with swagger.
