# src/controllers/authControllers.js
@@ -3,6 +3,17 @@ import User from '../models/userModel.js'
 import { generateToken } from '../utils/generateToken.js'
 
 export const login = async (req, res, next) => {
+  /* #swagger.requestBody = {
+        required: true,
+        description: "Login user",
+        content: {
+          "application/json ": {
+           schema: { $ref: '#/components/schemas/loginUser' },
+         }
+       } 
+     } 
+     #swagger.responses[401] */
+  console.log(req.xml)
   const { email, password } = req.body
   try {
     //check user exists
@@ -30,6 +41,16 @@ export const login = async (req, res, next) => {
   }
 }
 export const signup = async (req, res, next) => {
+  /* #swagger.requestBody = {
+      required: true,
+      description: "Create a new user",
+      content:{
+        "application/json ":{
+          schema: { $ref: '#/components/schemas/addUser'},
+         }
+       } 
+     }  
+     #swagger.responses[400] = { description: "user already exist or Bad request"} */
   try {
     console.log(req.body)
     const { username, fullName, email, password } = req.body
@@ -55,6 +76,8 @@ export const signup = async (req, res, next) => {
   }
 }
 export const logout = (req, res) => {
+  /* #swagger.description = "Logout user"
+     #swagger.responses[202] */
   return res
     .clearCookie('access_token')
     .status(202)
