# swagger-output.json
@@ -13,25 +13,25 @@
   "paths": {
     "/auth/login": {
       "post": {
+        "tags": [
+          "Auth routes"
+        ],
         "description": "",
         "responses": {
-          "default": {
-            "description": ""
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
+          "required": true,
+          "description": "Login user",
           "content": {
-            "application/json": {
+            "application/json ": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "email": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/loginUser"
               }
             }
           }
@@ -40,31 +40,28 @@
     },
     "/auth/signup": {
       "post": {
+        "tags": [
+          "Auth routes"
+        ],
         "description": "",
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "user already exist or Bad request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
+          "required": true,
+          "description": "Create a new user",
           "content": {
-            "application/json": {
+            "application/json ": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "username": {
-                    "example": "any"
-                  },
-                  "fullName": {
-                    "example": "any"
-                  },
-                  "email": {
-                    "example": "any"
-                  },
-                  "password": {
-                    "example": "any"
-                  }
-                }
+                "$ref": "#/components/schemas/addUser"
               }
             }
           }
@@ -73,7 +70,10 @@
     },
     "/auth/logout": {
       "post": {
-        "description": "",
+        "tags": [
+          "Auth routes"
+        ],
+        "description": "Logout user",
         "parameters": [
           {
             "name": "access_token",
@@ -84,14 +84,20 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "202": {
+            "description": "Accepted"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/": {
       "get": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -108,12 +114,18 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/post": {
       "post": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -127,6 +139,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -147,6 +162,9 @@
     },
     "/posts/{postId}": {
       "get": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -168,10 +186,16 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -200,12 +224,18 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/posts/{postId}/comment": {
       "post": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -227,6 +257,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -247,6 +280,9 @@
     },
     "/posts/{postId}/comments/{commentId}": {
       "delete": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -276,12 +312,18 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/account/update": {
       "put": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -295,6 +337,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -315,6 +360,9 @@
     },
     "/account/image": {
       "put": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -328,12 +376,18 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
     },
     "/account/update/password": {
       "put": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -347,6 +401,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         },
         "requestBody": {
@@ -370,6 +427,9 @@
     },
     "/{username}": {
       "get": {
+        "tags": [
+          "User routes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -391,8 +451,59 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "addUser": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "example": "abid"
+          },
+          "fullName": {
+            "type": "string",
+            "example": "sainul Abid"
+          },
+          "email": {
+            "type": "string",
+            "example": "abid123@gmail.com"
+          },
+          "password": {
+            "type": "string",
+            "example": "Passw0rd$"
+          }
+        },
+        "required": [
+          "username",
+          "fullName",
+          "email",
+          "password"
+        ]
+      },
+      "loginUser": {
+        "type": "object",
+        "properties": {
+          "email": {
+            "type": "string",
+            "example": "abid123@gmail.com"
+          },
+          "pasword": {
+            "type": "string",
+            "example": "Passw0rd$"
+          }
+        },
+        "required": [
+          "email",
+          "pasword"
+        ]
       }
     }
   }
